--- a/shop_app/pubspec.yaml
+++ b/shop_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   intl: ^0.15.8
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
