--- a/shop_app/pubspec.yaml
+++ b/shop_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.15.8
   http: ^0.13.4
   shared_preferences: ^2.0.15
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +40,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   fonts:
     - family: Montserrat
